# backoffice

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.production.yml  docker-compose.yml  intro.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 341ccab6928f_initial_full_schema.py  438bbed36d57_initial_full_schema_with_payment_methods.py  937c7c494521_add_integration_tables.py  a1b2c3d4e5f6_add_fx_conversions.py  a1b2c3d4e5f6_add_integration_event_id_to_bank_tx.py  a1b2c3d4e5f6_add_setup_tokens.py  b2c3d4e5f6a7_add_fx_conversions.py  b2f4c8d1e9a3_invoice_improvements_multi_payment_tax_code_company_fields.py  b3c4d5e6f7a8_add_loans_and_payment_allocations.py  c5d6e7f8a9b0_loan_document_lifecycle_fields.py  d6e7f8a9b0c1_enable_rls_on_all_tables.py  db4600c2fdb0_initial_schema.py  e7f8a9b0c1d2_add_journal_entries_and_account_class.py  f8a9b0c1d2e3_add_payment_reference_number.py
backend/app/: config.py  database.py  main.py  scheduler.py
backend/app/api/: accounts.py  auth.py  automation.py  bank_reconciliation.py  changelog.py  clients.py  deps.py  expenses.py  exports.py  files.py  fx_conversion.py  integrations.py  loans.py  (+11 more)
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_changelog.py  test_expenses.py  test_integrations.py  test_invoices.py  test_payments.py  test_payroll.py  test_security.py  test_state_machines.py  test_tasks.py
cli/: pyproject.toml
cli/acct/: api_client.py  config.py  formatters.py  main.py
cli/tests/: conftest.py
(+172 files in other folders)
