[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backoffice-cli"
version = "0.1.0"
description = "CLI for Backoffice Operations System"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
acct = "acct.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["acct"]
